@startuml
class User {

}

class Rectangle {
    +<<property>> Height : int
    +<<property>> Width : int
    +Area()
}

class Square {
    -_height : int
    -_width : int
    +<<property>> Height : int
    +<<property>> Width : int
}

User --> Rectangle
Rectangle <|-- Square

@enduml